Update HeidelTime